finished home page with review slider and contact form, several spacing and formatting issues remain

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@ body, html {
   }
 
 .navbar {
-    min-height: 80px;
+    max-height: 100px;
     font-family: 'Roboto', sans-serif;
   }
   
@@ -13,6 +13,14 @@ body, html {
     line-height: 80px;
     margin-top: 23px;
   }
+.logo {
+    width: auto;
+    max-height: 60px;
+}
+
+.nav-item {
+    margin-right: 20px;
+}
   
 .navbar-toggle {
     /* (80px - button height 34px) / 2 = 23px */
@@ -78,12 +86,47 @@ body, html {
 }
 .infoCard img {
     width: auto;
-    max-height: 450px;
+    max-height: 500px;
+    margin: 10px 0 5px 0;
 }
 .cardText {
     text-align: center;
     padding: 10%;
+    max-width: 50%;
 }
 .cardText h2 {
     color: #EF5D5D;
+}
+i {
+    color: #EF5D5D;
+    justify-content: center;
+}
+.col {
+    text-align: center;
+}
+
+.col i, h4, p {
+    padding: 10px;
+}
+
+.carouselslide {
+    display: none;
+    text-align: center;
+}
+
+#carouselWrapper {
+    margin-top: 10%;
+    text-align: center;
+}
+
+.btnSlide {
+    float: center;
+    padding: 10px;
+    margin-bottom: 5px;
+    border: none;
+    color: white;
+}
+
+.card {
+    text-align: center;
 }
